Add more charts

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "angular-chart.js": "^1.1.1",
     "angular-google-charts": "^1.1.6",
     "chart.js": "^2.9.3",
+    "echarts": "^4.9.0",
     "ng2-charts": "^2.4.2",
+    "ngx-echarts": "^5.1.2",
     "ngx-line-chart": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
